--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
             android:gravity="center"
             android:layout_width="170dp"
             android:layout_height="80dp"
-            android:drawableBottom="@drawable/ic_import_export_black_24dp"
+            android:drawableBottom="@drawable/ic_call_received_black_24dp"
             android:padding="10dp"
             android:text="RECIBIR DE ENTREVISTADOR"
             android:layout_below="@+id/transferir"
@@ -166,7 +166,7 @@
                         android:layout_width="64dp"
                         android:layout_height="64dp"
                         android:background="@drawable/cerclebackgroundyello"
-                        android:src="@drawable/ic_send_black_24dp"
+                        android:src="@drawable/ic_compare_arrows_black_24dp"
                         android:padding="10dp"/>
                     <TextView
                         android:id="@+id/transfTxt"
@@ -232,6 +232,16 @@
                 </LinearLayout>
             </android.support.v7.widget.CardView>
         </LinearLayout>
+
+    <Button
+        android:id="@+id/exitButton"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:text="SALIR"
+        android:textColor="#FFFF"
+        android:layout_marginTop="20dp"
+        android:background="@color/redColor"
+        android:visibility="invisible"/>
 
     <TextView
         android:layout_width="wrap_content"
