--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="materialgreen">#00BFA5</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorPrimaryText">#050505</color>
+    <color name="redColor">#FE2E2E</color>
 </resources>
